<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.andrea.basicphrases.MainActivity"
    android:columnCount="2"
    android:rowCount="4">

    <Button
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/hello_goodbye_peace"
        android:id="@+id/hello"
        android:onClick="buttonTapped"/>
    <Button
        android:layout_column="1"
        android:layout_row="0"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/how_are_you"
        android:id="@+id/howareyou"
        android:onClick="buttonTapped"/>
    <Button
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/please"
        android:id="@+id/please"
        android:onClick="buttonTapped"/>
    <Button
        android:layout_column="1"
        android:layout_row="1"
        android:layout_gravity="fill"
        android:text="@string/thank_you"
        android:id="@+id/thankyou"
        android:onClick="buttonTapped"/>
    <Button
        android:layout_column="0"
        android:layout_row="2"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/happy_birthday"
        android:id="@+id/happy_birthday"
        android:onClick="buttonTapped"/>
    <Button
        android:layout_column="1"
        android:layout_row="2"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/good"
        android:id="@+id/good"
        android:onClick="buttonTapped"/>
    <Button
        android:layout_column="0"
        android:layout_row="3"
        android:layout_gravity="fill"
        android:text="@string/yes"
        android:id="@+id/yes"
        android:onClick="buttonTapped"/>
    <Button
        android:layout_column="1"
        android:layout_row="3"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/no"
        android:id="@+id/no"
        android:onClick="buttonTapped"/>


</GridLayout>
